[package]
name = "java_decompiler_ollama"
version = "0.1.0"
edition = "2021"
license="MIT"
repository="https://github.com/roquess/java_decompiler_ollama"
description="Java decompiler using Ollama and javap"


[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"

[lib]
name = "java_decompiler_ollama"
path = "src/lib.rs"
